<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">식샤</string>
    <string name="app_explanation">서울대학교 식단 위젯 &amp; 앱</string>
        
   	<string name="operating_hour">운영 시간</string>
   	<string name="location">식당 위치</string>
    <string name="food_name">음식 이름</string>
    <string name="restaurant_name">식당 이름</string>
    <string name="restaurant">식당</string>
    <string name="menu">메뉴</string>
    <string name="rating_dialog_title">평가</string>
    <string name="rating_finished_dialog_title">평가 완료</string>

    <string name="download_error">식단 다운로드 실패!</string>
    <string name="download_retry">다시 하기</string>
    <string name="download_cancel">취소</string>
    <string name="check_network_state">데이터 네트워크 또는 Wi-Fi를 연결하고, 다시 시도해주세요.</string>
    <string name="already_rated_three_time">오늘은 이미 세 번 평가하셨습니다.</string>

    <string name="widget_alert_dialog_title">식샤 위젯을 아시나요?</string>
    <string name="widget_alert_dialog_message">홈 화면에 식샤 위젯을 추가하시면\n식단 정보를 더욱 간편하게\n보실 수 있습니다.</string>
    <string name="widget_alert_dialog_close">닫기</string>

	<string name="empty_menu">메뉴가 없습니다.</string>
    <string name="now_downloading">식단을 다운로드하고 있습니다...</string>
    <string name="now_refreshing">식단을 새로 불러옵니다...</string>
    <string name="back_pressed_twice_quit">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="empty_bookmark">즐겨 찾는 식당이 없습니다.</string>
    <string name="alert_how_to_bookmark">식단 탭에서 즐겨 찾는 식당을 추가해보세요.</string>

    <string name="message_to_touch_edit_button">하단의 편집 버튼을 눌러 순서를 바꿔보세요.</string>
    <string name="message_to_touch_confirm_button">우측 손잡이를 드래그하여 순서를 바꿔보세요.\n그리고 아래의 확인 버튼을 눌러 저장하세요.</string>

    <string name="restaurant_information">식당 정보</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="sharing">식단 공유</string>

    <string name="action_confirm">확인</string>
    <string name="action_edit">편집</string>

    <string name="development_version">개발용 버전을 이용하고 있습니다.</string>
    <string name="now_latest">최신 버전을 이용하고 있습니다.</string>
    <string name="not_latest">최신 버전을 이용하고 있지 않습니다.\n업데이트를 하려면 눌러주세요.</string>

    <string name="development_version_short">개발용 버전 이용 중</string>
    <string name="now_latest_short">최신 버전 이용 중</string>
    <string name="not_latest_short">최신 버전 이용 중이지 않음</string>

    <string name="settings_option_app_version">버전 정보</string>
    <string name="settings_option_refresh">식단 새로고침</string>
    <string name="settings_option_bookmark">즐겨찾기</string>
    <string name="settings_option_sequence">식당 순서 변경</string>
    <string name="settings_option_rating">식단 평가</string>
    <string name="settings_option_menu">식단</string>
    <string name="settings_option_empty_menu_invisible">메뉴 없는 식당 안 보기</string>
    <string name="settings_option_open_source_library">오픈 소스 라이브러리</string>
    <string name="settings_option_developer">만든 사람들</string>

    <string name="wafflestudio">와플스튜디오</string>

    <string name="reply_yes">예</string>
    <string name="reply_no">아니오</string>

    <string name="rating_yes">평가</string>
    <string name="rating_no">취소</string>
    <string name="rating_alert">※평가는 하루에 세 번 가능합니다.</string>
    <string name="rating_finished"> 평가가 완료되었습니다.</string>
    <string name="refresh_alert">내 평점이 반영된 별점을 보고싶으면,\n\n설정 탭-새로고침을 눌러주세요.</string>
    <string name="rating_remain">오늘 남은 평가횟수 :</string>

    <!-- Widget -->
    <string name="message_to_select_restaurant">위젯에 넣을 식당을 고르세요.\n그리고 확인 버튼을 눌러 저장하세요.</string>
    <string name="breakfast_check_dialog_title">아침 메뉴 보기 설정</string>
    <string name="breakfast_check_dialog_message">위젯에서 아침 메뉴를 보시겠습니까?</string>
    <string name="message_to_refresh">식단을 가져오지 못했습니다.\n새로고침 버튼을 눌러 다시 시도해주세요.</string>
	<string name="empty_restaurant">식단 정보가 없습니다.</string>

</resources>