<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_breakfast_check_dialog_message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/breakfast_check_dialog_message"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/widget_breakfast_check_dialog_positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_style"
            android:text="@string/reply_yes"
            android:textSize="19sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_gray" />

        <Button
            android:id="@+id/widget_breakfast_check_dialog_negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_style"
            android:text="@string/reply_no"
            android:textSize="19sp" />

    </LinearLayout>

</LinearLayout>