<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_with_shadow" />

        <TextView
            android:id="@+id/splash_dialog_explanation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_explanation"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/splash_dialog_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/progress_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_refresh" />

        <TextView
            android:id="@+id/splash_dialog_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/now_downloading"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>