<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rating_finished_dialog_header_view"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_primary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rating_finished_dialog_icon_view"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_with_shadow" />

        </LinearLayout>

        <TextView
            android:id="@+id/rating_finished_dialog_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/color_primary"
            android:textSize="23sp"
            android:text="@string/rating_finished_dialog_title"/>

        <TextView
            android:id="@+id/rating_remain_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/rating_remain"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rating_refresh_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:text="@string/refresh_alert"
            android:textSize="12sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>