<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rating_dialog_header_view"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_primary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rating_dialog_icon_view"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_with_shadow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/rating_dialog_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/color_primary"
                android:textSize="23sp"
                android:text="@string/rating_dialog_title"/>

            <TextView
                android:id="@+id/restaurant_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/restaurant"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/restaurant_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/restaurant"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/food_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/menu"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/food_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/menu"
                android:textSize="14sp"/>

            <RatingBar
                style="@style/StarRatingBar"
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginTop="20dp"
                android:rating="0.5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:soundEffectsEnabled="true" />
            />

            <TextView
                android:id= "@+id/rating_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:text="@string/rating_alert"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

                <ImageButton
                    android:id="@+id/rating_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rating_dialog_no_button"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="left"/>

                <ImageButton
                    android:id="@+id/rating_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rating_dialog_yes_button"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="right"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>